fix: adjust weather section background color for improved visibility

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -162,7 +162,7 @@ color: #ccc;
     right: 1rem;
     width: 140px;
     height: 200px;
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.027);
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
